# asca_engine

./: .gitignore  Cargo.toml
asca_lib/: Cargo.toml
asca_lib/asca_timer/: Cargo.toml
asca_lib/src/: lib.rs
asca_lib/src/asca_engine/: mod.rs  thread_manager.rs  tick_timer.rs
asca_lib/src/asca_engine/automata_engine/: automaton.rs  mod.rs
asca_lib/src/asca_engine/render_engine/: mod.rs
asca_lib/src/sdl2_manager/: mod.rs
asca_timer/: Cargo.toml
asca_timer/src/: lib.rs  main.rs
asca_timer/tests/: 1000_ms.rs  10_ms.rs  500_ms.rs
src/: main.rs
src/conway_engine/: mod.rs
src/conway_engine/con_board/: con_automata.rs  mod.rs
src/conway_engine/con_render/: camera.rs  fps_manager.rs  mod.rs  window_handler.rs
