[package]
name = "asca_engine"
version = "0.0.0"
edition = "2021"
authors = ["Kurallier"]
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["asca_timer"]
default_members = ["asca_timer"]

[workspace.dependencies]
#float-cmp = { version = "0.9.0", features = ["std"] }

[dependencies]
array2d = "0.3.2"
rand = "0.8.5"
sdl2 = { version = "0.36.0", features = ["unsafe_textures", "gfx"] }
asca_timer = { path = "./asca_timer"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
