[package]
name = "asca_engine"
version = "0.0.0"
edition = "2021"
authors = ["Kurallier"]
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asca_lib = { path = "./asca_lib"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
