[package]
name = "asca_lib"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["asca_timer"]
default_members = ["asca_timer"]

[dependencies]
asca_timer = { path = "./asca_timer"}
array2d = "0.3.2"
rand = "0.8.5"
sdl2 = { version = "0.36.0", features = ["unsafe_textures", "gfx"] }
